--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     {% block title %}
         {% comment %}  {% endcomment %}
     {% endblock title %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css\style.css' %}">
     {% block css %}
         {% comment %}  {% endcomment %}
     {% endblock css %}
