--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block css %}
+    {% load static %}
+    <link rel="stylesheet" href={% static 'css\store\home.css' %}>
 {% endblock css %}
 
 {% block title %}
@@ -8,7 +10,56 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Good morning</h1>
+    <section id="store-container" class="p-1">
+        <div class="container grid-3">
+            <div class="item-box">
+                <div class="img-container fl-row">
+                    {% load static %}
+                    <img src="{% static 'media\2+placeholder.png' %}" alt="item-img">
+                </div>
+                <div class="item-info">
+                    <h4 class="item-name">Product 1
+                    <span class="item-price">$12.00</span>
+                    </h4>
+                    <hr>
+                    <br>
+                    <a href="#" class="btn btn-primary"style="margin-left:1rem;" >Add To Cart</a>
+                    <a href="" class="btn btn-sec">View</a>
+                </div>
+            </div>
+            <div class="item-box">
+                <div class="img-container fl-row">
+                    {% load static %}
+                    <img src="{% static 'media\2+placeholder.png' %}" alt="item-img">
+                </div>
+                <div class="item-info">
+                    <h4 class="item-name">Product 1
+                    <span class="item-price">$12.00</span>
+                    </h4>
+                    <hr>
+                    <br>
+                    <a href="#" class="btn btn-primary" style="margin-left:1rem;">Add To Cart</a>
+                    <a href="" class="btn btn-sec">View</a>
+                </div>
+            </div>
+            <div class="item-box">
+                <div class="img-container fl-row">
+                    {% load static %}
+                    <img src="{% static 'media\2+placeholder.png' %}" alt="item-img">
+                </div>
+                <div class="item-info">
+                    <h4 class="item-name">Product 1
+                    <span class="item-price">$12.00</span>
+                    </h4>
+                    <hr>
+                    <br>
+                    <a href="#" class="btn btn-primary" style="margin-left:1rem;">Add To Cart</a>
+                    <a href="" class="btn btn-sec">View</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock content %}
 
 {% block js %}
