--- a/static/css/store/home.css
+++ b/static/css/store/home.css
@@ -13,7 +13,7 @@
     max-width: 100%;
     height: 400px;
     overflow: hidden;
-    border: 1px solid rebeccapurple;
+    border: 1px solid #333;
 }
 
 .item-box .img-container{
