finshed all UI desgin

--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -22,7 +22,7 @@
                     <h4>Items: <strong id="cart-items">12</strong></h4>
                     <h4>Total: <strong id="cart-total">$120</strong></h4>
                     <div class="btn-container">
-                        <a href="" class="btn-sec btn">Checkout</a>
+                        <a href="{% url 'store:checkout' %}" class="btn-sec btn">Checkout</a>
                     </div>
                 </div>
             </div>
