--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,9 +1,9 @@
 
 <nav id="main-nav" class="fl-row">
 <ul>
-    <li><a class= 'btn btn-dark' href="#">Page 1</a></li>
-    <li><a class= 'btn btn-dark' href="#">Page 2</a></li>
-    <li><a class= 'btn btn-dark' href="#">Page 3</a></li>
+    <li><a class= 'btn btn-dark' href="{% url 'store:store' %}">Store</a></li>
+    <li><a class= 'btn btn-dark' href="#">About Us</a></li>
+    <li><a class= 'btn btn-dark' href="#">Contact Us</a></li>
 </ul>
 <div id="cart" class="fl-row">
     <a href="admin/" class="btn btn-basic">Login</a>
