render products into store page

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
     <footer>
         {% comment %}  {% endcomment %}
     </footer>
+    <script src="{% static 'js\sotre\main.js' %}"></script>
     {% block js %}
     {% endblock js %}
 </body>
