--- a/static/css/store/home.css
+++ b/static/css/store/home.css
@@ -2,7 +2,9 @@
     background-color: #fff;   
 }
 
-
+.container{
+    max-width: 1500px;
+}
 .grid-3{
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -11,7 +13,7 @@
 
 .item-box{
     max-width: 100%;
-    height: 400px;
+    height: 450px;
     overflow: hidden;
     border: 1px solid #333;
 }
@@ -22,15 +24,18 @@
 }
 
 .img-container img {
-    width: 100%;
+    height: 100%;
+    padding: 1rem;
 }
 
 .item-box .item-info .item-name{
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     padding: 0 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.item-name span {
-    float: right;
-}
+
+
 
