--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -14,24 +14,25 @@
         <div class="container p-1">
             <div class="row">
                 <div class="col">
-                    <form action="">
+                    <form action="" id="payment-form" order="{{ordere}}">
                         <div id="user-info" class="p-1">
                             <input  placeholder="Name" name='name' type="text">
                             <input  placeholder="email" type="email" name="email">
+                            <br>
+                            <br>
+                            <hr>
                         </div>
-                        <hr>
                         <div id="shipping-info" class="p-1">
-                            <input type="text"  name="Contry" placeholder="Contry">
-                            <input type="text"  name="city" placeholder="City">
-                            <input type="text"  name="address" placeholder="Address">
-                            <input type="text"  name="street" placeholder="Street">
-                            <input type="text"  name="zipCode" placeholder="Zip Code">
+                            <input required type="text"  name="country" placeholder="Contry">
+                            <input required type="text"  name="city" placeholder="City">
+                            <input required type="text"  name="street" placeholder="Street">
+                            <input required type="text"  name="zipCode" placeholder="Zip Code">
                         </div>
                         <input type="submit" class="btn btn-primary" value="Contunue">
                     </form>
                     <br>
-                    <div class="payment-method p-1 hidden">
-                        <a href="#" class="btn btn-sec">Payment Methods</a>
+                    <div id="payment-window" class="payment-method p-1 hidden">
+                        <a id="pay-btn" href="#" class="btn btn-sec">Payment Methods</a>
                     </div>
                 </div>
                 <div class="col">
@@ -40,26 +41,40 @@
                     <h2 class="p-1">Order Summary</h2>
                     <hr>
                     <div class="grid-4">
+                        {% for item in order.orderitem_set.all %}
                         <div class="item-img fl-row p-1">
-                            <img src="{% static 'media\2+placeholder.png' %}" alt="product-img">
+                            <img src="{{item.product.imageURL}}" alt="product-img">
                         </div>
                         <div class="item-name fl-row">
-                            <h4>Product 2</h4>
+                            <h4>{{item.product.name}}</h4>
                         </div>
                         <div class="item-price fl-row">
-                            <h4>$124.99</h4>
+                            <h4>${{item.product.price|floatformat:2}}</h4>
                         </div>
                         <div class="item-quantity fl-row">
-                            <h4>X2</h4>
+                            <h4>X{{item.quantity}}</h4>
                         </div>
+                        {% endfor %}
                     </div>
                     <hr>
                     <div class="item-info">
-                        <h4>Items: <strong id="cart-items">12</strong></h4>
-                        <h4>Total: <strong id="cart-total">$120</strong></h4>
+                        <h4>Items: <strong id="cart-items">{{order.get_items_cart}}</strong></h4>
+                        <h4>Total: <strong id="cart-total">${{order.get_total_cart|floatformat:2}}</strong></h4>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock content %}
+
+
+{% block js %}
+    <script>
+        const user = '{{user}}'
+        function goHome(){
+         window.location.href = "{% url 'store:store' %}"
+}
+    </script>
+    {% load static %}
+    <script src="{% static 'js\store\checkout.js' %}"></script>
+{% endblock js %}
