الحمدلله نم الانتهاء من الوقع

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
     <footer>
         {% comment %}  {% endcomment %}
     </footer>
+    <script>
+        const user = '{{user}}'
+    </script>
     {% load static %}
     <script src="{% static 'js\store\main.js' %}"></script>
     {% block js %}
