--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -36,7 +36,7 @@
            </section>
            <hr>
            <section class="grid-5">
-                {% for item in order.orderitem_set.all %}
+                {% for item in items %}
                 <div class="col center">
                     <img class="p-1" src="{{item.product.imageURL}}" alt="product-img">
                 </div>
