Improve navbar and created a footer
added logo to navbar and gave some improment changes on its style, also create a footer and added to it website defination, rights and social acounts.

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     {% endblock content %}
     </main>
     <footer>
-        {% comment %}  {% endcomment %}
+        {% include 'partials\footer.html' %}
     </footer>
     <script>
         const user = '{{user}}'
