--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,8 @@ html, body{
     background-color:var(--light-color);
     color: var(--dark-color);
     font-family: Arial, Helvetica, sans-serif;
+    padding-top: 5%;
+    min-height: 100vh;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -62,6 +64,14 @@ a{
     align-items: center;
     justify-content: center;
 }
+
+.fl-row-sp-bet{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
 .fl-col{
     display: flex;
     flex-direction: column;
@@ -85,6 +95,10 @@ a{
     color: var(--dark-color);
 }
 
+.btn:hover{
+    transform: scale(1.1);
+}
+
 .btn-sec{
     background-color: var(--sec-color);
     color: var(--light-color);
@@ -106,6 +120,11 @@ a{
     color: var(--light-color);
 }
 
+.btn-light{
+    background-color: var(--light-color);
+    color: var(--dark-color);
+}
+
 
 
 
@@ -116,11 +135,13 @@ a{
 }
 
 #main-nav{
-    max-width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background: var(--main-color);
     font-size: 1.2rem;
     justify-content: space-between;
-    padding: 1rem 3rem;
 }
 
 #main-nav li{
@@ -147,4 +168,63 @@ a{
     background: red;
     color: white;
     
+}
+
+#main-nav #logo{
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    border: 3px solid var(--light-color);
+    border-radius: 25%;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.8);
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-75%);
+    ;
+}
+
+/* footer section */
+
+#main-footer{
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    display: grid;    
+    grid-template-columns: repeat(3,1fr);
+    position: sticky;
+    bottom: 0;
+    left: 0
+}
+
+#main-footer aside{
+    padding: 0 5rem;
+}
+
+#main-footer aside h4 {
+    font-size: 1.5rem;
+}
+
+#main-footer aside p{
+    font-size: 1.05rem;
+}
+
+.rights{
+}
+
+.social-box{
+    width: 40px;
+    height: 40px;
+    background: repeating-linear-gradient(
+        -45deg,
+        var(--light-color) 0%,
+        var(--light-color) 20%,
+        var(--dark-color) 20%,
+        var(--dark-color) 30%
+      );
+    margin: 0 0.3rem;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.social-box:hover{
+    transform: scale(1.1);
 }
