--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,7 +4,7 @@
         <p class="" ><i>Books Store</i> is online store for sell the best books in the world, in many languages and by the lowest price in the books market</p>
     </aside>
     <div class="rights fl-row">
-    <p>All rights recived by <i>Books Store</i> 2020 </p>
+    <p>All rights recived by &copy; <i>Books Store</i> 2020 </p>
     </div>
     <div class="social fl-row">
         <div class="social-box t"></div>
