--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,11 +11,12 @@
     box-sizing: border-box;
 }
 html, body{
+    position: relative;
     background-color:var(--light-color);
     color: var(--dark-color);
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 5%;
-    min-height: 100vh;
+    min-height: 70vh;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -50,6 +51,41 @@ a{
     padding: 3rem;
 }
 
+.px-0{
+    padding-left: 0;
+    padding-right: 0;
+}
+.px-1{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.px-2{
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.px-3{
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.py-0{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.py-1{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+.py-2{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.py-3{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+
 .m-1{
     margin: 1rem 0;
 }
@@ -59,6 +95,20 @@ a{
 .m-3{
     margin: 3rem 0;
 }
+
+.mx-0{
+    margin-left: 0;
+    margin-right: 0;
+}
+.mx-1{
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+.mx-2{
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
 .fl-row{
     display: flex;
     align-items: center;
@@ -190,9 +240,9 @@ a{
     color: var(--light-color);
     display: grid;    
     grid-template-columns: repeat(3,1fr);
-    position: sticky;
-    bottom: 0;
-    left: 0
+    position: absolute;
+    bottom: -20vh;
+    left: 0;
 }
 
 #main-footer aside{
