--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,12 +11,18 @@
     box-sizing: border-box;
 }
 html, body{
-    position: relative;
     background-color:var(--light-color);
     color: var(--dark-color);
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 5%;
-    min-height: 70vh;
+    padding-top: 8vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main{
+    margin: 0 0 auto 0 ;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -217,6 +223,7 @@ a{
 }
 
 #main-nav{
+    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
@@ -272,9 +279,6 @@ a{
     color: var(--light-color);
     display: grid;    
     grid-template-columns: repeat(3,1fr);
-    position: absolute;
-    bottom: -20vh;
-    left: 0;
 }
 
 #main-footer aside{
