--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -25,7 +25,7 @@
                     <hr>
                     <br>
                     <button class="btn btn-primary addToCart" action="add" productId="{{book.id}}" style="margin-left:1rem;" >Add To Cart</button>
-                    <a href="" class="btn btn-sec">View</a>
+                    <a href="{% url 'store:bookDetail' book.name %}" class="btn btn-sec">View</a>
                 </div>
             </div>
             {% endfor %}
