Add featurs on detail page
Today I create icon cart on the detail page and home page too, and I apply what I learned from freecodecamp of makeing a heart by css after and before alt, finally I added some if statment on home and detail js file.

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -5,7 +5,7 @@
     <li><a class= 'btn btn-dark' href="#">About Us</a></li>
     <li><a class= 'btn btn-dark' href="#">Contact Us</a></li> 
 </ul>
-<h1 class="p-1" id="logo">Books Store</h1>
+<a href="{% url 'store:store' %}"><h1 class="p-1" id="logo">Books Store</h1></a>
 <div id="cart" class="fl-row">
     {% if user.is_authenticated %}
         <section>
