--- a/static/css/store/detail.css
+++ b/static/css/store/detail.css
@@ -1,4 +1,14 @@
-.container{
+#back-home-btn{
+    position: relative;
+    left: 25%;
+    top: 5px;
+}
+
+#book-detail{
+    margin-top: 3rem;
+}
+
+#book-detail.container{
     width: 50vw;
     height: 50vh;
     display: grid;
@@ -47,11 +57,22 @@
 
 .options-control{
     grid-area: 2/1/3/2;
-    align-self: center;
+    align-self: start;
     justify-self: center;
 }   
-.detail.btn{
-    position: relative;
-    left: 25%;
-    top: 5px;
+
+.options-control .btn {
+    margin: 0 5px;
+    font-size: 1rem;
+    font-weight: 550;
+    display: flex;
 }
+
+.options-control .btn img{
+    width: 25px;
+    margin-left: 0.3rem;
+    align-self: center;
+    /* position: relative;
+    top: 3px; */
+}
+
