--- a/static/css/store/home.css
+++ b/static/css/store/home.css
@@ -37,6 +37,16 @@
     justify-content: space-between;
 }
 
+.item-info .btn{
+    margin: 0 0.3rem;
+    z-index: 100;
+}
+
+.item-info .btn img{
+    width: 20px;
+    margin-left: 0.3rem;
+}
+
 
 
 
