--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,24 +115,6 @@ a{
     margin-right: 2rem;
 }
 
-.fl-row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.fl-row-sp-bet{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
-.fl-col{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 .center{
     text-align: center;
@@ -185,6 +167,30 @@ a{
     background-color: var(--light-color);
 }
 
+.fl-row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fl-row-sp-bet{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fl-row-start{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.fl-col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .arrow{
     display: inline-block;
     position: relative;
@@ -213,6 +219,37 @@ a{
     left: 0;
     transform: rotate(45deg) translateY(5px) translateX(2px);
     background-color: inherit;
+}
+
+.heart{
+    margin-left: 0.6rem;
+    width: 13px;
+    height: 13px;
+    background-color: #fff;
+    transform: rotate(45deg);
+    position: relative;
+}
+
+.heart::after{
+    position: absolute;
+    content: "";
+    top: -50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:inherit;
+    border-radius: 50%;
+}
+
+.heart::before{
+    position: absolute;
+    content: "";
+    top: 0px;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    border-radius: 50%;
 }
 
 
