--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
         const user = '{{user}}'
     </script>
     {% load static %}
+    <script src="{% static 'js\base.js' %}"></script>
     <script src="{% static 'js\store\main.js' %}"></script>
     {% block js %}
     {% endblock js %}
