--- a/static/css/store/home.css
+++ b/static/css/store/home.css
@@ -11,12 +11,47 @@
     grid-gap: 1rem;
 }
 
+@media (max-width:1100px){
+    .grid-3{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media (max-width:850px){
+    .grid-3 {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
 .item-box{
     max-width: 100%;
     height: 450px;
     overflow: hidden;
     border: 1px solid #333;
     border-radius: 5%;
+}
+
+@media (max-width:550px){
+    .grid-3 {
+        grid-template-columns: 1fr;
+        
+    }
+    .item-box{
+        margin: auto;
+    }
+}
+
+
+
+@media (max-width:650px){
+    .item-box{
+        height: 350px;
+    }
+
+    .item-box .item-info .item-name{
+        font-size: 0.5rem;
+        display: none;
+    }
 }
 
 .item-box .img-container{
@@ -37,9 +72,18 @@
     justify-content: space-between;
 }
 
+@media (max-width:650px){
+    .item-box .item-info .item-name{
+        font-size: 1rem;
+        height: 20px;
+        overflow: hidden;
+        align-items: flex-start;
+    }
+
+}
+
 .item-info .btn{
     margin: 0 0.3rem;
-    z-index: 100;
 }
 
 .item-info .btn img{
