--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -8,13 +8,19 @@
 <a href="{% url 'store:store' %}"><h1 class="p-1" id="logo">Books Store</h1></a>
 <div id="cart" class="fl-row">
     {% if user.is_authenticated %}
-        <section>
-            <strong  >Hello <i>{{user.first_name}}</i></strong>
+        <section id="user-panel">
+            <div id="user-control-container" class='hidden'>
+                <strong  >Hello <i>{{user.first_name}}</i></strong>
             <a href="/admin" class="btn btn-basic mx-1 ">
              My Acount</a>
+            </div>
         </section>
     {% else %}
-        <section><a href="/admin" class="btn btn-basic">Login</a><span class="mx-1">Or</span><a href="/admin" class="btn btn-basic">Create Acount</a></section>
+        <section id="user-panel">
+            <div id="user-control-container" class='hidden'>
+                <a href="/admin" class="btn btn-basic">Login</a><span class="mx-1">Or</span><a href="/admin" class="btn btn-basic">Create Acount</a>
+            </div>
+        </section>
     {% endif %}
     {% load static %}
     <a href="{% url 'store:cart' %}"><img src="{% static 'media\cart.png' %}" alt="car-icon" id="cart-icon"></a>
