--- a/static/css/store/cart.css
+++ b/static/css/store/cart.css
@@ -2,6 +2,16 @@
     background-color: inherit;
 }
 
+@media (max-width:650px){
+    #cart-container{
+        padding: 2rem 0.5rem;
+    }
+
+    .container{
+        padding: 0;
+    }
+}
+
 .row{
     
     border: 1px solid #333;
@@ -10,6 +20,7 @@
 }
 
 .cart-info {
+    position: relative;
     padding:  0 2rem;
 }
 
@@ -22,6 +33,18 @@
     float: right;
 }
 
+@media (max-width:650px){
+    .cart-info .btn-container{
+        position: absolute;
+        bottom: 10px;
+        right: 5px;
+    }
+
+    .cart-info h4 {
+        font-size: 1.2rem;
+    }
+}
+
 .cart-info h4:first-child{
     margin-right: 2rem;
 }
@@ -30,6 +53,18 @@
     display: grid;
     grid-template-columns: repeat(2,1fr) repeat(3,0.5fr);
 }
+
+@media(max-width:650px){
+    .cart-info{
+        padding: 0;
+    }
+
+    .cart-info h4 {
+        font-size: 1rem;
+    }
+
+}
+
 
 .col {
     border-bottom: 0.5px solid #888;
@@ -45,6 +80,25 @@
 .col img{
     height: 100px;
 }
+
+@media (max-width:650px){
+    .col img{
+        height: 80px;
+    }
+
+    .col h4 {
+        font-size: 0.8rem;
+        text-align: center;
+    }
+    .col:nth-child(2) h4 {
+        text-align: left;
+    }
+
+    .col span {
+        font-size: 0.9rem;
+    }
+}
+
 .col#quanity{
     display: flex;
     align-items: center;
