--- a/static/css/store/detail.css
+++ b/static/css/store/detail.css
@@ -1,71 +1,118 @@
 #back-home-btn{
-    position: relative;
-    left: 25%;
-    top: 5px;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    transition: ease-in;
+}
+@media (max-width:1000px){
+    #back-home-btn{
+        left: 20px;
+    }
 }
 
 #book-detail{
-    margin-top: 3rem;
+    position: relative;
+    padding-top: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 #book-detail.container{
-    width: 50vw;
-    height: 50vh;
+    max-width: 1000px;
+    max-height: 60vh;
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 2.5fr 1fr;
+    grid-template-areas: 
+    "img text_"
+    "options text_"
+    ;
+}
+
+@media (max-width:650px){
+    #book-detail.container{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+        "img options"
+        "text_ text_"
+        ;
+    }
+
+    .options-control{
+        align-self: center;
+    }
+
+    .img-container img {
+        max-height: 150%;
+    }
 }
 
 .img-container {
-    grid-area: 1/1/2/2;
-    height: 100%;
-    width: 100%;
+   grid-area: img;
+   height: 100%;
 }
 
 .img-container img {
     max-height: 100%;
 }
 
+@media (max-width:650px){
+    .img-container img {
+        max-height: 150%;
+    }
+}
+
 .book-detail{
-    grid-area: 1/2/3/3;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
+    padding-top: 10%;
+    grid-area: text_;
 }
 
-.book-detail .p-container{
-    margin: 1rem;
-    /* overflow-y: scroll; */
+.book-detail p{
+    margin-top: 1rem;
+    overflow-y: auto;
+    max-height: 90%;
+}
+
+@media (max-width:650px){
+    .book-detail p{
+        height: 300px;
+        padding-bottom: 5rem;
+    }
 }
 
 
-
-.book-detail .p-container p{
-    text-align: justify;
-}
 
 .book-detail h2{
-    border-bottom: 1px solid #333;
-    width: 100%;
-    margin: 0;
-    padding-bottom: 1rem;
+    font-size: 1.8rem;
+    padding: 0 3rem 1rem 3rem;
+    border-bottom: 5px solid #f1a112;
+    width: fit-content;
+    margin: auto;
 }
 
 .options-control{
-    grid-area: 2/1/3/2;
-    align-self: start;
-    justify-self: center;
+  grid-area: options;
+
 }   
 
+@media (max-width:1200px){
+    .options-control{
+        flex-direction: column;
+    }
+}
+
 .options-control .btn {
-    margin: 0 5px;
+    margin: 0.5rem 5px;
     font-size: 1rem;
     font-weight: 550;
     display: flex;
+}
+
+@media (max-width:650px){
+    .options-control .btn{
+        font-size: 0.9rem;
+    }
 }
 
 .options-control .btn img{
