--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -11,34 +11,26 @@
 
 {% block content %}
     
-    <a href="{% url 'store:store' %}" id="back-home-btn" class="btn btn-basic">
+    
+    <article id="book-detail" class="container">
+        <a href="{% url 'store:store' %}" id="back-home-btn" class="btn btn-basic">
         <span class="arrow">
             <div class="lineT"></div>
             <div class="lineB"></div>
         </span>
         <span> Back To Store</span>
     </a>
-    <article id="book-detail" class="container p-1 m-1">
         <section class="img-container fl-row p-1">
             <img src="{{book.imageURL}}" alt="{{book.name|title}} book cover">
         </section>
         <section class="book-detail p-1">
             <h2 class="center">{{book.name|title}}</h2>
-            {% if biggerText %}
-            <div class="p-container"   style="overflow-y: scroll;">
                 <p id="book-prife" class="p-1">
                       {{book.brief}}
                 </p>
-            </div>
-            {% else %}
-            <div class="p-container">
-                <p id="book-prife" class="p-1">
-                      {{book.brief}}
-                </p>
-            </div>
-            {% endif %}
+            
         </section>
-        <section class="options-control p-1 fl-row">
+        <section class="options-control p-1 fl-col">
             <button id="addToCart" productId="{{book.id}}" action="add" class="btn btn-primary fl-row">
                 <span>Add To Cart</span>
                 {% load static %}
