--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ html, body{
     background-color:var(--light-color);
     color: var(--dark-color);
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 8vh;
+    padding-top: 4vh;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -43,6 +43,13 @@ a{
     text-decoration: none;
     color: inherit;
     font-size: inherit;
+}
+
+.heading-page{
+    font-size: 2.5rem;
+    text-transform: capitalize;
+    text-align: center;
+    color: #333;
 }
 
 .hidden{
@@ -121,9 +128,50 @@ a{
     margin-right: 2rem;
 }
 
+.my-0{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.my-1{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.my-2{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.my-3{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
 
 .center{
     text-align: center;
+}
+
+.success-message{
+    background: hsla(120, 100%, 70%, 0.5);
+    width: fit-content;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    margin: auto;
+}
+
+.info-message{
+    background: hsla(230, 100%, 60%, 0.5);
+    width: fit-content;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    margin: auto;
+}
+
+.error-message{
+    background: hsla(0, 100%, 70%, 0.5);
+    width: fit-content;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    margin: auto;
 }
 
 .btn{
